--- a/app-Way2/src/app/app.component.html
+++ b/app-Way2/src/app/app.component.html
@@ -9,7 +9,7 @@
     <h1>
       <div class="card bg-success text-white">
         <div class="card-body">
-          <strong>{{ title }} do Campeonato Brasileiro!</strong>
+          <strong><p class='card-font'>{{ title }} do Campeonato Brasileiro!</p></strong>
         </div>
       </div>
     </h1>
