--- a/app-Way2/src/app/views/pages/contatos/contatos.component.html
+++ b/app-Way2/src/app/views/pages/contatos/contatos.component.html
@@ -1,3 +1,11 @@
-<p>
-  contatos works!
-</p>
+<section>
+  <div class='list-style'>
+    <ul class="list-group col-9">
+      <li class="list-group-item"><h4 class='list-title'>Contatos</h4></li>
+      <li class="list-group-item"><p class='list-text'>E-mail: ivam.developer@gmail.com</p></li>
+      <li class="list-group-item"><p class='list-text'>Linkedin: https://www.linkedin.com/in/ivam-galvão-filho-0218b9b0/</p></li>
+      <li class="list-group-item"><p class='list-text'>Facebook: https://www.facebook.com/ivam.developer</p></li>
+      <li class="list-group-item"><img class='list-img' src='assets/images/Logo01.png' alt='taca'></li>
+    </ul>
+  </div>
+</section>
