--- a/app-Way2/src/app/views/pages/home/home.component.html
+++ b/app-Way2/src/app/views/pages/home/home.component.html
@@ -62,11 +62,11 @@
   <li class="list-group-item">
     <div class="card" style="width:400px">
     <div class="card-body">
-      <h4 class="card-title">Grandes Prêmios!</h4>
-      <p class="card-text">Confira a taça do campeonato!</p>
+      <h4 class="card-title">Grandes Craques!</h4>
+      <p class="card-text">Acompanhe o desempenho de seu ídolo!</p>
     </div>
     <br>
-    <img class="card-img-bottom" src="assets/images/Banner11.png" alt="Card image" style="width:100%; height:50%">
+    <img class="card-img-bottom" src="assets/images/Banner07.png" alt="Card image" style="width:100%">
   </div>
   </li>
   </div>
