--- a/app-Way2/src/app/views/pages/ranking/ranking.component.html
+++ b/app-Way2/src/app/views/pages/ranking/ranking.component.html
@@ -1,3 +1,6 @@
-<p>
-  ranking works!
-</p>
+<section>
+  <h4>Ranking do Brasileirão!</h4>
+  <div class="btn-group">
+    <button type="button" class="btn btn-success" routerLink="/old-ranking">Ranking de outras competições</button>
+  </div>
+</section>
