--- a/app-Way2/src/app/views/pages/sobre/sobre.component.html
+++ b/app-Way2/src/app/views/pages/sobre/sobre.component.html
@@ -1,3 +1,9 @@
-<p>
-  sobre works!
-</p>
+<section>
+<div class='list-style'>
+<ul class="list-group col-9">
+  <li class="list-group-item"><h4 class='list-title'>App-Way2</h4></li>
+  <li class="list-group-item"><p class='list-text'>O App Way2 do campeonato brasileiro apresenta o ranking de diversas edições da competição.</p></li>
+  <li class="list-group-item"><img class='list-img' src='assets/images/Logo01.png' alt='taca'></li>
+</ul>
+</div>
+</section>
