--- a/app-Way2/src/app/views/pages/ranking/ranking.component.html
+++ b/app-Way2/src/app/views/pages/ranking/ranking.component.html
@@ -1,6 +1,35 @@
 <section>
-  <h4>Ranking do Brasileirão!</h4>
-  <div class="btn-group">
-    <button type="button" class="btn btn-success" routerLink="/old-ranking">Ranking de outras competições</button>
-  </div>
+<div class="list-group">
+  <a href="#" class="list-group-item list-group-item-action"><h4>Ranking do Brasileirão!</h4></a>
+  <a href="#" class="list-group-item list-group-item-action">
+  <table class="table table-style">
+    <thead class="thead-light font-style">
+      <tr>
+        <th>Posição</th>
+        <th>Time</th>
+        <th>Vitórias</th>
+        <th>Empates</th>
+        <th>Derrotas</th>
+        <th>Pontos</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td class='font-style'>1º</td>
+        <td class='font-style'>Corinthians</td>
+        <td class='font-style'>15</td>
+        <td class='font-style'>2</td>
+        <td class='font-style'>4</td>
+        <td class='font-style'>76</td>
+      </tr>
+    </tbody>
+  </table>
+  </a>
+  <a class="list-group-item list-group-item-action">
+    <div class="btn-group">
+      <button type="button" class="btn btn-success" routerLink="/old-ranking">Ranking de outras competições</button>
+    </div>
+  </a>
+</div>
+  
 </section>
