--- a/app-Way2/src/app/views/pages/ranking/ranking.component.sass
+++ b/app-Way2/src/app/views/pages/ranking/ranking.component.sass
@@ -21,4 +21,8 @@
         margin-bottom: 5%
         margin-top: 5%
     .font-style
-        font-size: 2px         
+        font-size: 2px  
+.rounded-circle
+    width: 5%
+h4
+    text-align: left 
