--- a/app-Way2/src/app/views/pages/home/home.component.sass
+++ b/app-Way2/src/app/views/pages/home/home.component.sass
@@ -1,5 +1,16 @@
-carousel-inner img
-    width: 100%
-    height: 100%
-slider-style
-    margin-left: 45%    
+@media only screen and (min-width: 1000px)
+    .list-group-item-card
+        margin-left: 5%
+    .style-row
+        margin-left: 3%
+        margin-bottom: 5%    
+@media only screen and (max-width: 332px)
+    .carousel-inner img
+        width: 100%
+        height: 100%
+    .slider-style
+        margin-left: 45%    
+    .row
+        width: 332px
+    .list-group-item-card
+        margin-left: 4%    
