--- a/app-Way2/src/app/views/pages/ranking/ranking.component.sass
+++ b/app-Way2/src/app/views/pages/ranking/ranking.component.sass
@@ -1,27 +1,26 @@
-@media only screen and (max-width: 700px)
+@media only screen and (max-width: 768px)
     .table-style
-        margin-left: 10%
+        margin-left: 1%
+        margin-right: 10%
+        margin-bottom: 5%
+        margin-top: 5% 
+    .font-style
+        font-size: 12px 
+    .list-group-item
+        width: 768px
+@media only screen and (max-width: 332px)
+    .table-style
+        margin-left: 1%
         margin-right: 10%
         margin-bottom: 5%
         margin-top: 5%
     .font-style
-        font-size: 10px 
-@media only screen and (max-width: 500px)
-    .table-style
-        margin-left: 0%
-        margin-right: 10%
-        margin-bottom: 5%
-        margin-top: 5%
-    .font-style
-        font-size: 8px 
-@media only screen and (max-width: 300px)
-    .table-style
-        margin-left: 0%
-        margin-right: 10%
-        margin-bottom: 5%
-        margin-top: 5%
-    .font-style
-        font-size: 2px  
+        font-size: 6px  
+    .list-group-item
+        width: 318px
+    .section
+        padding-left: 2% 
+        padding-right: 5%    
 .rounded-circle
     width: 5%
 h4
