--- a/app-Way2/src/app/views/pages/contatos/contatos.component.sass
+++ b/app-Way2/src/app/views/pages/contatos/contatos.component.sass
@@ -1,17 +1,45 @@
 .list-style
-    margin-left: 30%
-    margin-right: 30%
+    margin-left: 2%
+    margin-right: 2%
     margin-bottom: 5%
 @media only screen and (max-width: 1400px)
     .list-title
-        font-size: 14px
+        font-size: 26px
         text-align: center
     .list-text
-        font-size: 14px
+        font-size: 24px
         text-align: center
     .list-img
         width: 300px
-@media only screen and (max-width: 1000px)
+@media only screen and (min-width: 1000px)
+    .list-title
+        font-size: 26px
+        text-align: center
+    .list-text
+        font-size: 24px
+        text-align: center
+    .list-img
+        width: 200px
+    .list-style
+        margin-left: 20%
+        margin-right: 20%
+        margin-bottom: 5%     
+    .list-group-item
+        width: 800px      
+@media only screen and (max-width: 768px)
+    .list-title
+        font-size: 26px
+        text-align: center
+    .list-text
+        font-size: 24px
+        text-align: center
+    .list-img
+        width: 130px
+    .list-group-item
+        width: 738px
+    .section
+        padding-left: 5%                     
+@media only screen and (max-width: 332px)
     .list-title
         font-size: 12px
         text-align: center
@@ -19,31 +47,8 @@
         font-size: 10px
         text-align: center
     .list-img
-        width: 200px  
-@media only screen and (max-width: 800px)
-    .list-title
-        font-size: 10px
-        text-align: center
-    .list-text
-        font-size: 10px
-        text-align: center
-    .list-img
-        width: 150px 
-@media only screen and (max-width: 700px)
-    .list-title
-        font-size: 8px
-        text-align: center
-    .list-text
-        font-size: 6px
-        text-align: center
-    .list-img
-        width: 100px                
-@media only screen and (max-width: 400px)
-    .list-title
-        font-size: 8px
-        text-align: center
-    .list-text
-        font-size: 0px
-        text-align: center
-    .list-img
-        width: 50px    
+        width: 50px  
+    .list-group-item
+        width: 318px
+    .section
+        padding-left: 5% 
