--- a/app-Way2/src/app/views/pages/home/home.component.html
+++ b/app-Way2/src/app/views/pages/home/home.component.html
@@ -9,7 +9,7 @@
     </ul>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img class='slider-style' src="assets/images/Banner04.png" alt="Arenas" width="1500" height="700">
+        <img src="assets/images/Banner04.png" alt="Arenas" width="1500" height="700">
         <div class="carousel-caption">
           <h3>Vai começar o espetáculo!</h3>
           <p>Confira grandes jogos no Campeonato Brasileiro!</p>
@@ -39,9 +39,9 @@
     </a>
   </div> 
   </li>
-  <div class='row'>
-  <li class="list-group-item">
-    <div class="card" style="width:400px">
+  <div class='row style-row'>
+  <li class="list-group-item list-group-item-card">
+    <div class="card" style="width:290px">
     <div class="card-body">
       <h4 class="card-title">Grandes Jogos!</h4>
       <p class="card-text">Confira grandes jogos em nosso campeonato nacional!</p>
@@ -49,23 +49,21 @@
     <img class="card-img-bottom" src="assets/images/Banner06.png" alt="Card image" style="width:100%">
   </div>
   </li>
-  <li class="list-group-item">
-    <div class="card" style="width:400px">
+  <li class="list-group-item list-group-item-card">
+    <div class="card" style="width:290px">
     <div class="card-body">
       <h4 class="card-title">Grandes Palcos!</h4>
       <p class="card-text">Confira grandes jogos em grandes arenas!</p>
     </div>
-    <br>
     <img class="card-img-bottom" src="assets/images/Banner09.png" alt="Card image" style="width:100%">
   </div>
   </li>
-  <li class="list-group-item">
-    <div class="card" style="width:400px">
+  <li class="list-group-item list-group-item-card">
+    <div class="card" style="width:290px">
     <div class="card-body">
       <h4 class="card-title">Grandes Craques!</h4>
       <p class="card-text">Acompanhe o desempenho de seu ídolo!</p>
     </div>
-    <br>
     <img class="card-img-bottom" src="assets/images/Banner07.png" alt="Card image" style="width:100%">
   </div>
   </li>
