--- a/app-Way2/src/app/views/pages/ranking/ranking.component.html
+++ b/app-Way2/src/app/views/pages/ranking/ranking.component.html
@@ -10,7 +10,7 @@
   <table class="table table-style">
     <thead class="thead-light font-style">
       <tr>
-        <th>Pos.</th>
+        <th>Posição</th>
         <th>Time</th>
         <th>Vitórias</th>
         <th>Empates</th>
