--- a/app-Way2/src/app/views/pages/sobre/sobre.component.sass
+++ b/app-Way2/src/app/views/pages/sobre/sobre.component.sass
@@ -1,42 +1,37 @@
 .list-style
-    margin-left: 30%
-    margin-right: 30%
+    margin-left: 2%
+    margin-right: 2%
     margin-bottom: 5%
-@media only screen and (max-width: 1400px)
+@media only screen and (min-width: 1000px)
     .list-title
+        font-size: 26px
         text-align: center
     .list-text
+        font-size: 24px
         text-align: center
     .list-img
         width: 300px
-@media only screen and (max-width: 1000px)
+    .list-style
+        margin-left: 20%
+        margin-right: 20%
+        margin-bottom: 5% 
+    .list-group-item
+        width: 800px       
+@media only screen and (max-width: 768px)
     .list-title
-        font-size: 16px
+        font-size: 26px
         text-align: center
     .list-text
-        font-size: 16px
+        font-size: 24px
         text-align: center
     .list-img
-        width: 200px  
-@media only screen and (max-width: 800px)
-    .list-title
-        font-size: 16px
-        text-align: center
-    .list-text
-        font-size: 16px
-        text-align: center
-    .list-img
-        width: 150px 
-@media only screen and (max-width: 700px)
-    .list-title
-        font-size: 16px
-        text-align: center
-    .list-text
-        font-size: 16px
-        text-align: center
-    .list-img
-        width: 100px                
-@media only screen and (max-width: 400px)
+        width: 300px
+    .list-group-item
+        width: 738px
+    .section
+        padding-left: 5% 
+        padding-bottom: 25%                       
+@media only screen and (max-width: 332px)
     .list-title
         font-size: 12px
         text-align: center
@@ -44,4 +39,8 @@
         font-size: 10px
         text-align: center
     .list-img
-        width: 50px                        
+        width: 50px  
+    .list-group-item
+        width: 318px
+    .section
+        padding-left: 5%                          
